--- a/politics_small_nation.html
+++ b/politics_small_nation.html
@@ -30,7 +30,7 @@
 
       <div class="collapse navbar-collapse justify-content-center" id="nav">
         <ul class="navbar-nav gap-3 align-items-center">
-          <li class="nav-item"><a class="nav-link text-white" href="Home.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="About.html">About Me</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="videos.html">Videos</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="Contacts.html">Contacts</a></li>
@@ -117,4 +117,5 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
+
 </html>
