--- a/videos.html
+++ b/videos.html
@@ -45,7 +45,7 @@
 
       <div class="collapse navbar-collapse justify-content-center" id="nav">
         <ul class="navbar-nav gap-3 align-items-center">
-          <li class="nav-item"><a class="nav-link text-white" href="Home.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="About.html">About Me</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="videos.html">Videos</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="Contacts.html">Contacts</a></li>
@@ -244,4 +244,5 @@ document.getElementById("nextPage").onclick = () => {
 
     
 </body>
+
 </html>
