--- a/why_investment_matters.html
+++ b/why_investment_matters.html
@@ -29,7 +29,7 @@
 
       <div class="collapse navbar-collapse justify-content-center" id="nav">
         <ul class="navbar-nav gap-3 align-items-center">
-          <li class="nav-item"><a class="nav-link text-white" href="Home.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="About.html">About Me</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="videos.html">Videos</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="Contacts.html">Contacts</a></li>
@@ -123,3 +123,4 @@ document.getElementById("year").innerText = new Date().getFullYear();
  
 </body>
 </html>
+
