--- a/videos.html
+++ b/videos.html
@@ -27,8 +27,7 @@
 </head>
 
 <body>
-    <!-- navbar -->
-       <!-- LOGO -->
+  <!-- HEADER -->
   <header class="site-header">
     <img src="logo.jpeg" class="logos" alt="The Chicken Nugget logo">
     <h1 class="underline-wide" aria-hidden="true">The Best Finance & Politics Critic</h1>
@@ -37,9 +36,10 @@
   </header>
 
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg custom-nav sticky-top" aria-label="Main Navigation">
+  <nav class="navbar navbar-expand-lg custom-nav sticky-top">
     <div class="container-fluid justify-content-center">
-      <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
+              data-bs-target="#nav" aria-controls="nav" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -51,198 +51,180 @@
           <li class="nav-item"><a class="nav-link text-white" href="Contacts.html">Contacts</a></li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" id="blogsMenu" role="button" aria-expanded="false">Blogs</a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="blogsMenu">
+            <a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown"
+               href="#" id="blogsMenu">Blogs</a>
+
+            <ul class="dropdown-menu dropdown-menu-dark">
               <li><a class="dropdown-item" href="Finance.html">Finance</a></li>
-              <li><a class="dropdown-item" href="Politics.html">Politics
+              <li><a class="dropdown-item" href="Politics.html">Politics</a></li>
               <li><a class="dropdown-item" href="economy.html">Economy</a></li>
             </ul>
+
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-
-
-<!-- =============================================================
-                     TV WITH PAGINATION
-============================================================== -->
-<div class="tv-wrapper">
+  <!-- TV SECTION -->
+  <div class="tv-wrapper">
     <div class="tv-antenna">
-        <span></span>
-        <span></span>
+      <span></span><span></span>
     </div>
 
     <div class="tv-frame">
-        <div class="tv-screen">
+      <div class="tv-screen">
 
-            <!-- ================= TV PAGES ================ -->
-            <div class="tv-pages">
+        <div class="tv-pages">
 
-                <!-- PAGE 1 -->
-                <div class="tv-card-grid tv-page active">
-                      <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video1.png">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video2.png">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video3.jpeg">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video1.png">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
+          <!-- PAGE 1 -->
+          <div class="tv-card-grid tv-page active">
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video1.png">
+                  <div class="play-icon">▶</div>
                 </div>
-
-                <!-- PAGE 2 -->
-                <div class="tv-card-grid tv-page">
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video1.png">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video2.png">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video3.jpeg">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-
-                     <div class="tv-card">
-                        <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                            <div class="thumb-wrap">
-                                <img src="video2.png">
-                                <div class="play-icon">▶</div>
-                            </div>
-                            <h4>My First Video</h4>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- PAGE 3 -->
-                <div class="tv-card-grid tv-page">
-                    <div class="tv-card"><img src="video2.png"><h4>Video Title 9</h4></div>
-                    <div class="tv-card"><img src="video1.png"><h4>Video Title 10</h4></div>
-                    <div class="tv-card"><img src="video3.jpeg"><h4>Video Title 11</h4></div>
-                    <div class="tv-card"><img src="video2.png"><h4>Video Title 12</h4></div>
-                </div>
-
+                <h4>My First Video</h4>
+              </a>
             </div>
 
-                   <!-- PAGE 4 -->
-                <div class="tv-card-grid tv-page">
-                    <div class="tv-card"><img src="video2.png"><h4>Video Title 9</h4></div>
-                    <div class="tv-card"><img src="video1.png"><h4>Video Title 10</h4></div>
-                    <div class="tv-card"><img src="video3.jpeg"><h4>Video Title 11</h4></div>
-                    <div class="tv-card"><img src="video1.png"><h4>Video Title 12</h4></div>
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video2.png">
+                  <div class="play-icon">▶</div>
                 </div>
-
+                <h4>My First Video</h4>
+              </a>
             </div>
 
-            <!-- =============== PAGINATION BUTTONS ================= -->
-            <div class="tv-pagination">
-                <button id="prevPage">◀</button>
-                <span id="pageIndicator">1 / 3</span>
-                <button id="nextPage">▶</button>
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video3.jpeg">
+                  <div class="play-icon">▶</div>
+                </div>
+                <h4>My First Video</h4>
+              </a>
             </div>
+
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video1.png">
+                  <div class="play-icon">▶</div>
+                </div>
+                <h4>My First Video</h4>
+              </a>
+            </div>
+
+          </div>
+
+          <!-- PAGE 2 -->
+          <div class="tv-card-grid tv-page">
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video1.png">
+                  <div class="play-icon">▶</div>
+                </div>
+                <h4>My First Video</h4>
+              </a>
+            </div>
+
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video2.png">
+                  <div class="play-icon">▶</div>
+                </div>
+                <h4>My First Video</h4>
+              </a>
+            </div>
+
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video3.jpeg">
+                  <div class="play-icon">▶</div>
+                </div>
+                <h4>My First Video</h4>
+              </a>
+            </div>
+
+            <div class="tv-card">
+              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
+                <div class="thumb-wrap">
+                  <img src="video2.png">
+                  <div class="play-icon">▶</div>
+                </div>
+                <h4>My First Video</h4>
+              </a>
+            </div>
+
+          </div>
+
+          <!-- PAGE 3 -->
+          <div class="tv-card-grid tv-page">
+            <div class="tv-card"><img src="video2.png"><h4>Video Title 9</h4></div>
+            <div class="tv-card"><img src="video1.png"><h4>Video Title 10</h4></div>
+            <div class="tv-card"><img src="video3.jpeg"><h4>Video Title 11</h4></div>
+            <div class="tv-card"><img src="video2.png"><h4>Video Title 12</h4></div>
+          </div>
+
+          <!-- PAGE 4 (moved inside pages) -->
+          <div class="tv-card-grid tv-page">
+            <div class="tv-card"><img src="video2.png"><h4>Video Title 13</h4></div>
+            <div class="tv-card"><img src="video1.png"><h4>Video Title 14</h4></div>
+            <div class="tv-card"><img src="video3.jpeg"><h4>Video Title 15</h4></div>
+            <div class="tv-card"><img src="video1.png"><h4>Video Title 16</h4></div>
+          </div>
 
         </div>
+
+        <!-- PAGINATION -->
+        <div class="tv-pagination">
+          <button id="prevPage">◀</button>
+          <span id="pageIndicator">1 / 4</span>
+          <button id="nextPage">▶</button>
+        </div>
+
+      </div>
     </div>
-    
-</div>
- 
+  </div>
 
-
-
-<!-- ===================== PAGINATION SCRIPT ===================== -->
-<script>
-let currentPage = 0;
-const pages = document.querySelectorAll(".tv-page");
-const indicator = document.getElementById("pageIndicator");
-
-function updatePages() {
-    pages.forEach((p, i) => {
-        p.classList.toggle("active", i === currentPage);
-    });
-
-    indicator.textContent = `${currentPage + 1} / ${pages.length}`;
-}
-
-document.getElementById("prevPage").onclick = () => {
-    if (currentPage > 0) currentPage--;
-    updatePages();
-};
-
-document.getElementById("nextPage").onclick = () => {
-    if (currentPage < pages.length - 1) currentPage++;
-    updatePages();
-};
-</script>
-
-
-
-
-
-
-  <!-- footer -->
-    <footer class="site-footer">
+  <!-- FOOTER -->
+  <footer class="site-footer">
     <small>© <span id="year"></span> THE_CHICKEN_NUGGET — All rights reserved.</small>
   </footer>
-   <script>
-    // set year
-    document.getElementById("year").innerText = new Date().getFullYear(); 
-    </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.getElementById("year").innerText = new Date().getFullYear();
 
-    
+    let currentPage = 0;
+    const pages = document.querySelectorAll(".tv-page");
+    const indicator = document.getElementById("pageIndicator");
+
+    function updatePages() {
+      pages.forEach((p, i) => {
+        p.classList.toggle("active", i === currentPage);
+      });
+      indicator.textContent = `${currentPage + 1} / ${pages.length}`;
+    }
+
+    document.getElementById("prevPage").onclick = () => {
+      if (currentPage > 0) currentPage--;
+      updatePages();
+    };
+
+    document.getElementById("nextPage").onclick = () => {
+      if (currentPage < pages.length - 1) currentPage++;
+      updatePages();
+    };
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
-
 </html>
