--- a/videos.html
+++ b/videos.html
@@ -66,133 +66,62 @@
     </div>
   </nav>
 
-  <!-- TV SECTION -->
-  <div class="tv-wrapper">
-    <div class="tv-antenna">
-      <span></span><span></span>
-    </div>
+ 
+ <div class="container my-5">
+  <div class="row g-4">
 
-    <div class="tv-frame">
-      <div class="tv-screen">
-
-        <div class="tv-pages">
-
-          <!-- PAGE 1 -->
-          <div class="tv-card-grid tv-page active">
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video1.png">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video2.png">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video3.jpeg">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video1.png">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-          </div>
-
-          <!-- PAGE 2 -->
-          <div class="tv-card-grid tv-page">
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video1.png">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video2.png">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video3.jpeg">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-            <div class="tv-card">
-              <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" target="_blank">
-                <div class="thumb-wrap">
-                  <img src="video2.png">
-                  <div class="play-icon">▶</div>
-                </div>
-                <h4>My First Video</h4>
-              </a>
-            </div>
-
-          </div>
-
-          <!-- PAGE 3 -->
-          <div class="tv-card-grid tv-page">
-            <div class="tv-card"><img src="video2.png"><h4>Video Title 9</h4></div>
-            <div class="tv-card"><img src="video1.png"><h4>Video Title 10</h4></div>
-            <div class="tv-card"><img src="video3.jpeg"><h4>Video Title 11</h4></div>
-            <div class="tv-card"><img src="video2.png"><h4>Video Title 12</h4></div>
-          </div>
-
-          <!-- PAGE 4 (moved inside pages) -->
-          <div class="tv-card-grid tv-page">
-            <div class="tv-card"><img src="video2.png"><h4>Video Title 13</h4></div>
-            <div class="tv-card"><img src="video1.png"><h4>Video Title 14</h4></div>
-            <div class="tv-card"><img src="video3.jpeg"><h4>Video Title 15</h4></div>
-            <div class="tv-card"><img src="video1.png"><h4>Video Title 16</h4></div>
-          </div>
-
+    <!-- Card 1 -->
+    <div class="col-md-6">
+      <div class="card h-100">
+        <img src="video1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">How much Percent you should invest?</h5>
+          <p class="card-text">Know how much money you should invest</p>
+          <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" class="btn btn-primary">Watch</a>
         </div>
-
-        <!-- PAGINATION -->
-        <div class="tv-pagination">
-          <button id="prevPage">◀</button>
-          <span id="pageIndicator">1 / 4</span>
-          <button id="nextPage">▶</button>
-        </div>
-
       </div>
     </div>
+    
+
+    <!-- Card 2 -->
+    <div class="col-md-6">
+      <div class="card h-100">
+        <img src="video2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Introduction To share Market</h5>
+          <p class="card-text">Know what is share market</p>
+          <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" class="btn btn-primary">Read More...</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <!-- <div class="col-md-6">
+      <div class="card h-100">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text...</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div> -->
+
+    <!-- Card 4 -->
+    <!-- <div class="col-md-6">
+      <div class="card h-100">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text...</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div> -->
+
   </div>
+</div>
+
 
   <!-- FOOTER -->
   <footer class="site-footer">
