--- a/videos.html
+++ b/videos.html
@@ -90,7 +90,7 @@
         <div class="card-body">
           <h5 class="card-title">Introduction To share Market</h5>
           <p class="card-text">Know what is share market</p>
-          <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" class="btn btn-primary">Read More...</a>
+          <a href="https://youtu.be/hMXhT0B3fFc?si=fnUqsrLmR5aBZ8yU" class="btn btn-primary">Watch</a>
         </div>
       </div>
     </div>
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
